<resources>
    <string name="app_name">RFATM</string>
    <string name="hint_txt_correo">Email</string>
    <string name="hint_txt_pass">Password</string>
    <string name="txt_btn_ini_sesion">Log In</string>
    <string name="txt_btn_ini_google">Sign in with Google</string>
    <string name="txt_btn_registro">Sign Up</string>
    <string name="lbl_recuperar">Forgot your password?</string>
    <string name="txt_recuperar">Recover Password</string>
    <string name="txt_registro_title">Sign Up</string>
    <string name="hint_txt_usuario">User (first and last name)</string>
    <string name="txt_jugador">Player</string>
    <string name="txt_entrenador">Coach</string>
    <string name="toast_error_registro">You must fill in all fields to register.</string>
    <string name="navigation_btn1">Home</string>
    <string name="navigation_btn2">Standings</string>
    <string name="navigation_btn3">Ranking</string>
    <string name="navigation_btn4">Profile</string>
    <string name="btn_cerrar">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_reset">Reset Password</string>
    <string name="dialog_nuevo_usuario">Select your team</string>
    <string name="dialog_nuevo_usuario_radiogroup">Select your role</string>
    <string name="vs_recycler_partido">VS</string>
    <string name="btn_acta">Match Report</string>
    <string name="lbl_sin_fecha">No date</string>
    <string name="tolbar_acta">Match Report</string>
    <string name="sets_hint">Ex: 11–7</string>
    <string name="resultado">Result</string>
    <string name="clasificacion_fragment_tittle">Standings:</string>
    <string name="editar_perfil_estilo">Playing Style</string>
    <string name="editar_perfil_nombre">Username</string>
    <string name="editar_perfil_cambiar">Change Password</string>
    <string name="toast_equipo_no_encontrado">Team not found</string>
    <string name="toast_error_al_cargar_datos">Error loading data</string>
    <string name="toast_tipo_de_usuario_no_reconocido">Unrecognized user type</string>
    <string name="toast_error_al_obtener_tipo_de_usuario">Error retrieving user type</string>
    <string name="toast_usuario_no_autenticado">User not authenticated</string>
    <string name="toast_error_al_subir_imagen">Error uploading image</string>
    <string name="toast_perfil_actualizado_correctamente">Profile updated successfully</string>
    <string name="toast_error_al_actualizar_perfil">Error updating profile</string>
    <string name="toast_error_al_actualizar_foto">Error updating photo</string>
    <string name="toast_foto_actualizada_correctamente">Photo updated successfully</string>
    <string name="error_al_obtener_usuario">Error retrieving user</string>
    <string name="error_al_obtener_equipo">Error retrieving team</string>
    <string name="equipo_no_asignado">Team not assigned</string>
    <string name="equipo_no_encontrado">Team not found</string>
    <string name="error_al_obtener_liga">Error retrieving league</string>
    <string name="liga_no_encontrada">League not found</string>
    <string name="no_autenticado">Not authenticated</string>
    <string name="usuario_no_encontrado">User not found</string>
    <string name="toast_registro_completado">Registration completed.</string>
    <string name="toast_error_al_registrar">Registration error:</string>
    <string name="toast_error_al_verificar_jugador">Error verifying player.</string>
    <string name="toast_error_al_cargar_equipos">Error loading teams.</string>
    <string name="toast_no_hay_equipos_registrados">No teams registered.</string>
    <string name="toast_error_al_cargar_partidos">Error loading matches.</string>
    <string name="exception_jugador_no_encontrado">Player not found.</string>
    <string name="exception_documento_de_usuario_no_existe">User document does not exist</string>
    <string name="exception_equipoid_vac_o_o_nulo">TeamId is empty or null</string>
    <string name="perfil_plantilla">Roster</string>
    <string name="perfil_suplentes">Substitutes</string>
    <string name="entrenador">coach</string>
    <string name="exception_usuario_no_autenticado">User not authenticated.</string>
    <string name="no_es_un_entrenador">Not a coach</string>
    <string name="error">Error</string>
    <string name="no_encontrado">Not found</string>
    <string name="jugador_desconocido">Unknown player</string>
    <string name="nombre_de_jugador">Player name</string>
    <string name="error_al_obtener_ruta_del_equipo">Error retrieving team path</string>
    <string name="equipo_actualizado_correctamente">Team updated successfully</string>
    <string name="error_al_actualizar_equipo">Error updating team</string>
    <string name="no_se_encontr_el_equipo_del_entrenador">Coachs team not found</string>
    <string name="error_al_obtener_el_equipo">Error retrieving team</string>
    <string name="jugador_a_adido_como_suplente">Player added as substitute</string>
    <string name="error_al_a_adir_suplente">Error adding substitute</string>
    <string name="entrenador_a_adido">Coach added</string>
    <string name="error_al_a_adir_entrenador">Error adding coach</string>
    <string name="fallo_al_cargar_imagen_gs_usando_por_defecto">Failed to load image gs://, using default</string>
    <string name="fallo_al_cargar_imagen_por_defecto">Failed to load default image</string>
    <string name="tipo_de_usuario_no_reconocido">Unrecognized user type</string>
    <string name="usuario_no_encontrado_en_firestore">User not found in Firestore.</string>
    <string name="usuario_no_autenticado">User not authenticated.</string>
    <string name="porcentaje_actualizado">Percentage updated</string>
    <string name="error_al_actualizar_porcentaje">Error updating percentage</string>
    <string name="error_cargando_jugadores">Error loading players</string>
    <string name="puntos">Points</string>
    <string name="derrotas">Losses</string>
    <string name="victorias">Wins</string>
    <string name="nombre">Name</string>
    <string name="ranking">Ranking:</string>
    <string name="el_equipoid_es_nulo_o_vac_o">TeamId is null or empty</string>
    <string name="el_documento_de_usuario_no_existe">User document does not exist</string>
    <string name="acta_del_partido">Match Report</string>
    <string name="resultado_final">Final Score:</string>
    <string name="error_al_cargar_nombre_de_equipo">Error loading team name</string>
    <string name="error_al_obtener_jugador">Error retrieving player</string>
    <string name="acta_guardada_con_xito">Report saved successfully</string>
    <string name="error_al_guardar_el_acta">Error saving report</string>
    <string name="estado_del_partido_actualizado_a_jugado">Match status updated to played</string>
    <string name="error_al_actualizar_estado_del_partido">Error updating match status</string>
    <string name="error_al_cargar_jugadores">Error loading players</string>
    <string name="error_al_actualizar_estad_sticas">Error updating statistics</string>
    <string name="error_al_obtener_el_estado_del_partido">Error getting match status</string>
    <string name="error_al_cargar_equipos">Error loading teams</string>
    <string name="error_al_cargar_acta">Error loading report</string>
    <string name="fall_la_autenticaci_n_con_firebase">Firebase authentication failed</string>
    <string name="error_en_inicio_de_sesi_n_con_google">Google sign-in error:</string>
    <string name="correo_o_contrase_a_incorrectos">Incorrect email or password.</string>
    <string name="debes_verificar_tu_correo_electr_nico_antes_de_continuar">You must verify your email before continuing</string>
    <string name="correo_de_verificaci_n_enviado_a">Verification email sent to </string>
    <string name="error_al_enviar_verificaci_n">Error sending verification:</string>
    <string name="usuario_existente_actualizado">Existing user updated</string>
    <string name="error_al_actualizar_usuario">Error updating user</string>
    <string name="registro_completo">Registration complete!</string>
    <string name="error_al_guardar_datos">Error saving data</string>
    <string name="error_al_buscar_username">Error searching for username</string>
    <string name="la_contrase_a_debe_tener_al_menos_6_caracteres_una_may_scula_un_n_mero_y_un_car_cter_especial">
        Password must be at least 6 characters long, include an uppercase letter, a number, and a special character.
    </string>
    <string name="ingresa_tu_correo">Enter your email</string>
    <string name="correo_enviado_revisa_tu_bandeja">Email sent. Check your inbox.</string>
    <string name="datos_actualizados_correctamente">Data updated successfully</string>
    <string name="error_al_actualizar_los_datos">Error updating data</string>
    <string name="no_se_encontr_el_id_del_equipo">Team ID not found</string>
    <string name="error_al_subir_la_imagen">Error uploading image</string>
    <string name="error_al_obtener_ids_suplentes">Error retrieving substitute IDs</string>
    <string name="error_al_obtener_ids_titulares">Error retrieving starting player IDs</string>
    <string name="error_al_obtener_los_datos_del_usuario">Error retrieving user data</string>
    <string name="error_al_actualizar_el_usuario">Error updating user</string>
    <string name="sin_nombre">No name</string>
    <string name="liga_no_asignada">League not assigned</string>
    <string name="el_correo_es_obligatorio">Email is required</string>
    <string name="la_contrase_a_es_obligatoria">Password is required</string>
    <string name="perfil_actualizado">Profile updated</string>
    <string name="error_al_guardar_acta">Error saving record</string>
    <string name="error_al_verificar_estado_del_partido">Error checking match status</string>
    <string name="partido_actualizado">Match updated</string>
    <string name="necesitas_rellenar_todos_los_campos">You need to fill in all the fields</string>
    <string name="el_partido_ya_fue_jugado">The match has already been played</string>
    <string name="error_al_procesar_estad_sticas_para_partido">Error processing statistics for match</string>
    <string name="acta_inicial_creada">Initial record created</string>
    <string name="error_al_crear_acta_inicial">Error creating initial record</string>
    <string name="selecciona_equipo">Choose your team</string>
    <string name="btn_aceptar">Accept</string>
    <string name="escudo_actualizado_correctamente">Badge updated successfully</string>
    <string name="no_se_pudo_obtener_el_id_del_equipo">Could not retrieve the team ID</string>
    <string name="error_al_obtener_el_id_del_equipo">Error retrieving the team ID: </string>
    <string name="id_del_equipo_inv_lido">Equip invalid name</string>
    <string name="nombre_entrenador">Trainer name</string>
    <string name="Nombre_del_equipo">Team name</string>
    <string name="Partidos_jugados">Matches played</string>
    <string name="Victorias">Wins</string>
    <string name="Porcentaje_de_victorias">Victories percentage</string>
</resources>
