<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Vista.Activities.EditarPerfilActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtbBarEditarJugador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_fondos"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Editar perfil" />

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtbBarEditarJugador"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/color_letra"
        app:boxStrokeColor="@color/color_fondos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPerfil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/actor"
            android:hint="@string/editar_perfil_nombre"
            android:textColor="@color/color_letra"
            android:textColorHint="@color/color_letra"
            android:textSize="@dimen/letra_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEstilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/color_letra"
        app:boxStrokeColor="@color/color_fondos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEstilo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/actor"
            android:hint="@string/editar_perfil_estilo"
            android:textColor="@color/color_letra"
            android:textColorHint="@color/color_letra"
            android:textSize="@dimen/letra_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCambiar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/actor"
        android:text="@string/editar_perfil_cambiar"
        android:textColor="@color/color_letra"
        android:textSize="@dimen/letra_size_btn"
        app:backgroundTint="@color/color_fondos"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>